# test-omp

./: .gitignore  CMakeLists.txt  README.md  test.c  test_omp.c
